test/compiler_errors/method-override.lzx
<canvas>
  <class name="texty" extends="text">
    <method name="call" args="val">
      var result = "hello " + val;
      // arbitrary javascript here.
      this.setText(result);
    </method>
    <method name="apply" args="val">
      var result = "hello " + val;
      // arbitrary javascript here.
      this.setText(result);
    </method>
    <method name="onmousedown" args="val">
      var result = "hello " + val;
      // arbitrary javascript here.
      this.setText(result);
    </method>
  </class>
  <simplelayout />
  <texty name="foo1" />
  <texty name="foo2" />
  <script>
    // the first case works
    foo1.call("world");
    foo2.call("galaxy");
    foo1.apply("whirled");
    foo2.onmousedown("xyz");
    foo2.apply("gal-ax-sea");
  </script>
</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2007 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
